force-app/main/default/objects/Refund__c/fields/Refund_Reference__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reference__c</fullName>
    <label>Refund Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>