force-app/main/default/objects/Refund__c/validationRules/Refund_Cannot_Exceed_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Cannot_Exceed_Paid</fullName>
    <active>true</active>
    <errorConditionFormula>Refund_Amount__c &gt; Booking__r.Total_Amount__c</errorConditionFormula>
    <errorDisplayField>Refund_Amount__c</errorDisplayField>
    <errorMessage>Refund amount cannot exceed the total booking amount paid.</errorMessage>
</ValidationRule>